@@ -1,21 +1,25 @@
-# Retro-Games
-What I hope to learn from creating each game:
-- Plan, organize, and execute the completion of a project from start to finish
+# Pong
+I will be recreating the game Pong programming in Java with the help of JavaFX to render the graphical interface. 
+
+Some goals and learning outcomes from creating Pong:
+- Plan, organize, and execute till completion of Pong
 - Improve my knowledge and experience with Object Oriented Programming (OOP)
-- Understand the strengths and weaknesses of the programming languages and how to fix issues within them
+- Use threads to help with object movement and collision detection
 - Design a user-friendly interface and simple experience
-What I did learn and accomplish developing the 3 games:
-- 
 
-## Objectives
-For this project, I will be creating 3 popular Games, from the past, with the help of 3 different programming languages and compatible GUI frameworks for other systems.
-The games with languages I will be programming in are:
-- **Pong** written in Java with [JavaFX](https://openjfx.io/)
-- **Space Invaders** written in C++ with [glfw](https://www.glfw.org/) and including [glew](https://glew.sourceforge.net/)
-- **Pool** written in Swift with SwiftUI (in progress) (SwiftU)
 
-## SetUp Instructions
-In there respected folders, each will have corresponding instructions for creating its own game.
-[Pong](https://github.com/Edison-Wei/Retro-Games/tree/main/Pong#setup) Setup Instructions
-[Space Invaders](https://github.com/Edison-Wei/Retro-Games/tree/main/Space-Invaders#setup) Setup Instructions
-[Pool]() Setup Instructions (**Pool will have to be compiled on and only works on Apple devices**)
+## Setup
+1. To begin, Download or clone this repository to your local machine.
+
+2. Ensure you have Java installed on your system. Try ``` java -version ``` in the terminal to check.
+If not, you can download from the [Java Website](https://www.java.com/). Any version will work for the application to run correctly.
+
+3. Then, Head over to the [JavaFx website](https://openjfx.io/) and download version 21.0.4 of the SDK for your OS.
+
+4. Using the following command to compile and run the application.
+``` command
+java --module-path "/Path/To/javafx-sdk-21.0.4/lib" --add-modules javafx.controls,javafx.fxml Pong_Game/src/pong/*.java
+```
+Make sure to replace '/Path/To/' to your home directory to the file location.
+
+5. You are all set. Enjoy, the game!!
